--- a/doc/log.org
+++ b/doc/log.org
@@ -1,6 +1,39 @@
 #+TITLE: GridKit Log
 #+OPTIONS: num:nil toc:nil
 
+* Date: <2016-11-30 Wed>
+
+I think I have fixed the issue with the broken polygons by making a
+separate polygons table and filtering them on validity. I've also made
+a separate script to test on invalidity, which now lives in
+util/invalid-polygons.sql.
+
+To distinguish polygon-like open linestrings from linelike open
+linestrings, I'm using the heuristic that the distance between the
+start and enpoint of the line should be less than (or equal to) the
+length of the line divided by two, which is actually quite liberal
+since it includes two legs of equidistant triangles as polygons.
+
+In all of EuropePower.osm, 11 polygons are invalid, and of those, just
+1 actually creates a multipolygon when buffered. In other words, the
+underlying data issue is probably common enough, but it rarely
+generates an error. And in each of those cases, buffering the line
+rather than the created polygon will create a proper polygon.
+
+* Date: <2016-11-29 Tue>
+
+I can repeat the issue with the broken multipolygons.
+I results from self-intersecting polygons.
+Some of these, apparently, are actually... lines.
+
+Which is of course because I originally hadn't specified that the damn
+thing had to be stations. I've modified the query so it returns only stations.
+
+And now, I just get two stations, which is just enough to fail :-).
+
+
+
+
 * Date: <2016-11-28 Mon>
 
 Start of a new logfile to document GridKit development.
@@ -110,13 +143,15 @@ select power_id, hstore(w.tags)->'power',
 #+END_SRC
 
 Will sometimes result in the third variable being a multipolygon!
-And according to Konstantinos
+
 What I need to do is figure out when this happens:
 
 #+BEGIN_SRC sql
 SELECT * FROM (
     SELECT way_id, line, st_buffer(st_makepolygon(st_addpoint(line, st_startpoint(line))), 100)
-     WHERE NOT ST_IsClosed(line) AND ST_NumPoints(line) > 3
+     FROM way_geometry
+     JOIN source_objects on osm_id = way_id and osm_type = 'w'
+     WHERE power_type = 's' AND NOT ST_IsClosed(line) AND ST_NumPoints(line) > 3
 ) line_buffers (osm_id, line_geom, buffer_geom)
 WHERE ST_GeometryType(buffer_geom) = 'ST_MultiPolygon';
 #+END_SRC
